# git-tag-bump

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  git_tag_bump.py  pyproject.toml
